@@ -3,27 +3,35 @@ package calculator;
 import java.util.*;
 
 public class Calculator {
-    private List<Integer> numbers = new LinkedList<>();
-
+    private final List<Integer> numbers = new LinkedList<>();
+    
     public void enter(int i){
-        numbers.add(i);
-        if (numbers.size() > 2){
+        this.numbers.add(i);
+        if (this.numbers.size() > 2){
             throw new IllegalStateException();
         }
     }
-
+    
     public void add(){
-        if (numbers.size() != 2){
+        if (this.numbers.size() != 2){
             throw new IllegalStateException();
         }
-        numbers.set(0, numbers.get(0) + numbers.get(1));
-        numbers.remove(1);
+        this.numbers.set(0, this.numbers.get(0) + this.numbers.get(1));
+        this.numbers.remove(1);
     }
-
-    public int getResult(){
-        if (numbers.size() != 1){
+    
+    public void multiply() {
+        if (this.numbers.size() != 2){
             throw new IllegalStateException();
         }
-        return numbers.get(0);
+        this.numbers.set(0, this.numbers.get(0) * this.numbers.get(1));
+        this.numbers.remove(1);
+    }
+    
+    public int getResult(){
+        if (this.numbers.size() != 1){
+            throw new IllegalStateException();
+        }
+        return this.numbers.getFirst();
     }
 }
